Speed up filter creation time
Signed-off-by: Calum Murray <cmurray@redhat.com>